# rag-based-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
cache/: cache.json
chroma_db/: chroma.sqlite3
data/: hrcare_faq_chunks.jsonl
metrics/: metrics.json
reports/: REPORT.MD
src/: __init__.py  build_index.py  main.py
src/indexing/: __init__.py  chunking.py  embeddings.py  parsing.py  pipeline.py
src/querying/: __init__.py  cache.py  error_handler.py  evaluation_models.py  evaluator.py  exceptions.py  llm.py  metrics.py  models.py  pricing.py  prompts.py  retrieval.py  router.py  tools.py  validations.py
src/utils/: __init__.py  file_io.py  time_utils.py
tests/: README.md  __init__.py  conftest.py  test_query_endpoints.py
